sonar: cleanup